--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  h1 {
+    @apply text-9xl;
+  }
+  h2 {
+    @apply text-4xl;
+    @apply lg:text-6xl;
+    @apply md:text-5xl;
+    @apply sm:text-4xl;
+  }
+  h3 {
+    @apply text-6xl;
+  }
+
+  p {
+    @apply text-lg;
+    @apply lg:text-xl;
+    @apply md:text-lg;
+    @apply sm:text-base;
+  }
+}
+
 :root {
   --gray-900: #0c0c0d;
   --gray-800: #131313;
