--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,10 @@
 
 @layer base {
   h1 {
-    @apply text-9xl;
+    @apply text-5xl;
+    @apply lg:text-7xl;
+    @apply md:text-6xl;
+    @apply sm:text-5xl;
   }
   h2 {
     @apply text-4xl;
@@ -32,6 +35,9 @@
   --gray-400: #6f6f6f;
   --gray-300: #c8c8c8;
   --purple-300: #b292ff;
+  --purple-100: #C69AFF;
+  --purple-400: #9F53FF;
+  --purple-500: #6104D6;
   --white: #fff;
 }
 
@@ -44,6 +50,9 @@
     --gray-300: #c8c8c8;
     --green-500: #5fb9b0;
     --purple-300: #b292ff;
+    --purple-100: #C69AFF;
+    --purple-400: #9F53FF;
+    --purple-500: #6104D6;
     --white: #fff;
   }
 }
