--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,10 @@
     @apply sm:text-4xl;
   }
   h3 {
-    @apply text-6xl;
+    @apply text-3xl;
+    @apply lg:text-5xl;
+    @apply md:text-4xl;
+    @apply sm:text-3xl;
   }
 
   p {
@@ -39,6 +42,7 @@
   --purple-400: #9F53FF;
   --purple-500: #6104D6;
   --white: #fff;
+  --gray-gradient: linear-gradient(90deg, #232323 0%, #434343 49%, #232323 100%);
 }
 
 @media (prefers-color-scheme: dark) {
